--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -61,6 +60,7 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "@ionic/lab": "3.2.10"
+    "@ionic/lab": "3.2.10",
+    "react-scripts": "4.0.3"
   }
 }
